--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Biblioteca do curso de JS com TDD na prática",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "prepush": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +22,17 @@
   "bugs": {
     "url": "https://github.com/thiagodiasb91/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/thiagodiasb91/js-tdd-course#readme"
+  "homepage": "https://github.com/thiagodiasb91/js-tdd-course#readme",
+  "dependencies": {
+    "gitignore": "^0.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "husky": "^0.14.3"
+  }
 }
